Fixes for responsiveness and dark mode

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -138,7 +138,8 @@ html[data-theme='dark'] a:hover {
 
 /* Footer */
 .footer {
-  padding-top: 6rem;
+  padding-top: 4rem;
+  border-top: 1px solid var(--ifm-contents-border-color);
 }
 
 .footer.footer--dark {
