--- a/src/pages/styles.module.css
+++ b/src/pages/styles.module.css
@@ -7,21 +7,34 @@
  * Hero
  */
 
-.heroBanner {
+.hero {
   position: relative;
   padding: 8rem 0 6rem;
   background: linear-gradient(to bottom, white 40%, var(--ifm-color-secondary-lightest) 600%);
 }
 
-html[data-theme='dark'] .heroBanner {
-  background: linear-gradient(to bottom, var(--ifm-background-color) 40%, black 600%);
+.hero span {
+  display: block;
+  margin-bottom: 1rem;
+
+  font-size: var(--ifm-h5-font-size);
+  font-weight: 500;
+  text-transform: uppercase;
+}
+
+.hero h1 {
+  font-size: 3rem;
+}
+
+.hero p {
+  font-size: 1.4rem;
 }
 
 .buttons {
-  margin: 3rem 0 0;
+  margin-top: 3rem;
 }
 
-.getStarted {
+.getStarted:first-of-type {
   margin-right: 2rem;
 }
 
@@ -31,7 +44,7 @@ html[data-theme='dark'] .heroBanner {
 
 .heroImage {
   position: absolute;
-  top: 0px;
+  bottom: -162px;
   right: -93px;
   max-width: 650px;
 }
@@ -45,27 +58,38 @@ html[data-theme='dark'] .heroBanner {
 }
 
 @media (max-width: 996px) {
+  .hero {
+    padding: 4rem 0 3rem;
+  }
+
+  .hero h1 {
+    font-size: 2.4rem;
+  }
+
+  .hero p {
+    font-size: 1.2rem;
+  }
+
   .heroImage {
     display: none;
   }
+}
+
+html[data-theme='dark'] .hero {
+  background: linear-gradient(to bottom, var(--ifm-background-color) 40%, black 600%);
 }
 
 /**
  * Installation
  */
 
-/* .install {
-  padding: 10rem 0 6rem;
+.install {
+  margin-bottom: 4rem;
 }
-
-@media (max-width: 996px) {
-  .install {
-    padding: 3rem 0;
-  }
-} */
 
 .installContainer {
   padding-top: 8rem;
+  padding-bottom: 2rem;
 
   background: var(--ifm-color-gray-100);
 }
@@ -104,6 +128,7 @@ html[data-theme='dark'] .heroBanner {
   display: inline-block;
   height: 6px;
   width: 9px;
+
   border-left: 2px solid var(--ifm-color-primary);
   border-bottom: 2px solid var(--ifm-color-primary);
   transform: rotate(-45deg);
@@ -118,6 +143,8 @@ html[data-theme='dark'] .heroBanner {
 }
 
 .installSelection label code {
+  margin-left: 0.6rem;
+
   font-size: var(--ifm-h6-font-size);
 }
 
@@ -169,35 +196,38 @@ html[data-theme='dark'] .heroBanner {
   text-align: center;
 }
 
-/* Step-by-step */
+@media (max-width: 996px) {
+  .install {
+    margin-bottom: 1rem;
+  }
+
+  .installContainer {
+    padding-top: 3rem;
+    padding-bottom: 3rem;
+  }
+}
+
+html[data-theme='dark'] .installContainer {
+  background: #22272E;
+}
+
+html[data-theme='dark'] .installCheckbox label::before {
+  background: #22272E;
+  border: 1px solid #585858;
+}
+
+/**
+ * Step-by-step guide
+ */
 
 .stepByStep {
-  padding: 8rem 0;
-}
-
-.stepByStepBox {
-  border-radius: var(--ifm-global-radius);
-  padding-top: calc(1.5 * var(--ifm-spacing-vertical));
-  padding-bottom: calc(1.5 * var(--ifm-spacing-vertical));
-}
-
-@media (max-width: 1200px) {
-  .stepByStepBox.col--8 {
-    flex: 0 0 100% !important;
-    margin-left: 0 !important;
-  }
+  padding: 4rem 0;
 }
 
 .stepByStep h2 {
   margin-bottom: 3rem;
   font-size: 2rem;
   text-align: center;
-}
-
-@media (max-width: 996px) {
-  .stepByStep img {
-    display: none;
-  }
 }
 
 .stepByStepLink {
@@ -216,7 +246,7 @@ html[data-theme='dark'] .heroBanner {
   padding: 4px;
   margin-right: 1rem;
 
-  background: white;
+  background: var(--ifm-background-color);
   border: 1px solid #35414A;
   border-radius: 2px;
 }
@@ -226,5 +256,72 @@ html[data-theme='dark'] .heroBanner {
   width: 143px;
   height: 14px;
   
-  color: #35414A;
+  color: var(--ifm-font-base-color);
+}
+
+@media (max-width: 996px) {
+  .stepByStep {
+    padding: 3rem 0;
+  }
+
+  .stepByStep h2 {
+    margin-bottom: var(--ifm-paragraph-margin-bottom);
+  }
+
+  .stepByStep img {
+    display: none;
+  }
+
+  .stepByStepLinks {
+    margin-bottom: var(--ifm-paragraph-margin-bottom);
+  }
+}
+
+/**
+ * Doc boxes
+ */
+
+.docs {
+  padding: 4rem 0;
+}
+
+.docBox {
+  padding: var(--ifm-spacing-horizontal);
+}
+
+.docBox:hover {
+  text-decoration: none;
+}
+
+.docBox h3 {
+  color: var(--ifm-color-secondary);
+}
+
+.docBox p {
+  margin: 0;
+
+  color: var(--ifm-font-base-color);
+  font-weight: 400;
+}
+
+.docBox:hover h3 {
+  color: var(--ifm-color-primary);
+}
+
+@media (max-width: 996px) {
+  .docs {
+    padding: 0 0 3rem;
+  }
+
+  .docBox {
+    padding: var(--ifm-spacing-vertical);
+  }
+}
+
+html[data-theme='dark'] .docBox h3 {
+  color: var(--ifm-color-primary);
+}
+
+html[data-theme='dark'] .docBox:hover h3 {
+  color: var(--ifm-color-accent);
 }
